--- a/MorgFrimenApp/MorgFrimenApp/wwwroot/index.html
+++ b/MorgFrimenApp/MorgFrimenApp/wwwroot/index.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="BlazorWebAssembly.styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">     
 </head>
 
 <body>
@@ -19,6 +20,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+
     <script src="_framework/blazor.webview.js" autostart="false"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
