--- a/BlazorWebAssembly/wwwroot/index.html
+++ b/BlazorWebAssembly/wwwroot/index.html
@@ -9,11 +9,15 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="BlazorWebAssembly.styles.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">     
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
 
 <body>
-    <div id="app">Загрузка!!!...</div>
+    <div id="app">
+       <div class="d-flex justify-content-center"> 
+           <div class=" spinner-border" role="status" />
+       </div>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
