--- a/MorgFrimenApp/MorgFrimenApp/wwwroot/index.html
+++ b/MorgFrimenApp/MorgFrimenApp/wwwroot/index.html
@@ -9,11 +9,21 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="BlazorWebAssembly.styles.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">     
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
 
 <body>
-    <div id="app">Загрузка!!!...</div>
+    <div id="app">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-4" role="status" />
+                <div class="col-4" role="status" >
+                    <div class="spinner-border" role="status" />
+                </div>
+                <div class="col-4" role="status" />
+            </div>
+        </div>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
