--- a/MorgFrimenApp/MorgFrimenApp/wwwroot/index.html
+++ b/MorgFrimenApp/MorgFrimenApp/wwwroot/index.html
@@ -14,15 +14,9 @@
 
 <body>
     <div id="app">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-4" role="status" />
-                <div class="col-4" role="status" >
-                    <div class="spinner-border" role="status" />
-                </div>
-                <div class="col-4" role="status" />
-            </div>
-        </div>
+       <div class="d-flex justify-content-center"> 
+           <div class=" spinner-border" role="status" />
+       </div>
     </div>
 
     <div id="blazor-error-ui">
